--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,3 +34,69 @@ footer{
     margin: 0;
     font-family: "Ancizar",serif;
   }
+
+  /* Estilo do contêiner do carrossel */
+.carousel {
+    position: relative;
+    width: 40%;
+    max-width: 500px;
+    margin: auto;
+    overflow: hidden;
+    border: 2px solid #ccc;
+  }
+  
+ /* Contêiner pai para texto e carrossel */
+.content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px; 
+    margin: 20px;
+  }
+  
+  /* Estilo para o texto */
+  .text {
+    flex: 1; /* O texto ocupa uma parte proporcional */
+  }
+  
+  /* Estilo para o carrossel */
+  .carousel {
+    flex: 1; 
+    width: 40%;
+    max-width: 500px;
+    margin: auto;
+    overflow: hidden;
+    border: 2px solid #ccc;
+  }
+  
+  /* Estilo das imagens */
+  .carousel-images {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+  
+  .carousel-images img {
+    width: 100%;
+    flex-shrink: 0;
+  }
+  
+  /* Botões de navegação */
+  button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 2;
+  }
+  
+  button.prev {
+    left: 10px;
+  }
+  
+  button.next {
+    right: 10px;
+  }
