--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,17 +1,37 @@
+
 /* Barra superior */
 .top-bar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;
-    background-color: #062F4F;
+  background-color:#062F4F;
     color: #EAEBEA;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    z-index: 1001;
+    padding: 50px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
+  .logo-img {
+    width: 100px;
+    height: auto;
+  }
+
+  .logo {
+    font-size: 25px;
+    font-weight: bold;
+  }
+  
+  nav a {
+    color: white;
+    text-decoration: none;
+    margin-left: 20px;
+  }
+
+ body {
+    margin: 0;
+    font-family: "Ancizar",serif;
+  }
+
 /* Ajuste para o conteúdo principal */
 main {
     margin-top: 60px; 
@@ -28,11 +48,6 @@ footer{
     align-items: center;
     padding: 5px 50px;
 
-  }
-
-  body {
-    margin: 0;
-    font-family: "Ancizar",serif;
   }
 
   /* Estilo do contêiner do carrossel */
@@ -56,7 +71,7 @@ footer{
   
   /* Estilo para o texto */
   .text {
-    flex: 1; /* O texto ocupa uma parte proporcional */
+    flex: 1; 
   }
   
   /* Estilo para o carrossel */
