style/Cor nas questoes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -222,3 +222,10 @@ footer {
 
   /*PÁGINA DE ALERTAS - CSS*/
 
+/*-------------------------------------------*/
+
+/* Css do Quiz */
+
+.questoesQuiz {
+  color: #062F4F;
+}
