style/paragrafo de total de pontos

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -237,3 +237,8 @@ footer {
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
+#paragrafo {
+  font-size: 20px;
+  text-align: center;
+  color: #062F4F;
+}
