--- a/src/css/style.css
+++ b/src/css/style.css
@@ -242,3 +242,11 @@ footer {
   text-align: center;
   color: #062F4F;
 }
+#botaoEnviar {
+  background-color: #062F4F;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+}
