fix/img invertida bugada

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -142,20 +142,22 @@ body {
   color: #333;
 }
 
-#enchente2 {
+#solucionarComo {
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: right;
-  gap: 140px;
+  gap: 40px;
+  padding: 2rem;
+  flex-wrap: wrap;
 }
 
-.comoAgir h2{
+.comoSolucionar h2{
   color: #023e8a;
   margin-bottom: 10px;
-  font-size: 18px;
+  font-size: 24px;
 }
 
-.comoAgir p {
+.comoSolucionar p {
   font-size: 20px;
   color: #333;
   max-width: 700px;
