--- a/src/css/style.css
+++ b/src/css/style.css
@@ -295,23 +295,27 @@ body {
     transition: background-color 0.3s;
   }
   #temaRosa {
-    position: fixed;
+    position: flex;
     top: 15px;
     right: 50px;
     font-size: 24px;
     cursor: pointer;
   }
   #temaEscuro {
-    position: fixed;
+    position: flex;
     top: 15px;
     right: 82px;
     font-size: 24px;
     cursor: pointer;
   }
   #temaClaro {
-    position: fixed;
+    position: flex;
     top: 15px;
     right: 110px;
     font-size: 24px;
     cursor: pointer;
   }
+
+.modo-rosa header{
+  background-color: #ff78cb;
+}
