--- a/src/css/style.css
+++ b/src/css/style.css
@@ -170,8 +170,65 @@ body {
     margin-left: 20px;
   }
 
+  #tecnologia h3 {
+    color: #023e8a;
+    margin-bottom: 10px auto;
+    text-align: center;
+    margin: 40px;
+    font-size: 24px;
+  }
+
+  #tecnologia p {
+    font-size: 20px;
+    color: #333;
+    margin-bottom: 10px auto;
+    text-align: center;
+    margin: 40px;
+}
+
+.linha {
+  width: 60%;  
+  height: 2px;
+  background: #023e8a; 
+  margin: 40px auto; 
+  display: block;
+  border-radius: 2px; 
+}
+
+#objetivos{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  padding: 2rem;
+  flex-wrap: wrap;
+}
+
+#objetivos h3 {
+  color: #023e8a;
+  margin-bottom: 10px;
+  font-size: 24px;
+}
+
+ #objetivos p {
+    font-size: 20px;
+    color: #333;
+    margin-bottom: 10px auto;
+    text-align: center;
+    margin: 40px;
+}
+
+ .aumentada {
+    transform: scale(1); 
+    transition: transform 0.5s ease;
+  }
+
+.aumentada:hover {
+    transform: scale(1.1);
+  }
 
 /*-------------------------------------------*/
+
 /*Mapa*/
 
 #atencaoRisco p{
