--- a/src/css/style.css
+++ b/src/css/style.css
@@ -295,27 +295,70 @@ body {
     transition: background-color 0.3s;
   }
   #temaRosa {
-    position: flex;
+    font-size: 25px;
+    cursor: pointer;
+    position: absolute;
     top: 15px;
     right: 50px;
-    font-size: 24px;
-    cursor: pointer;
   }
   #temaEscuro {
-    position: flex;
+    font-size: 25px;
+    cursor: pointer;
+    position: absolute;
     top: 15px;
     right: 82px;
-    font-size: 24px;
-    cursor: pointer;
   }
   #temaClaro {
-    position: flex;
+    font-size: 25px;
+    cursor: pointer;
+    position: absolute;
     top: 15px;
     right: 110px;
-    font-size: 24px;
-    cursor: pointer;
   }
 
+body.modo-rosa {
+  background-color: #f0f4f8;
+}
 .modo-rosa header{
   background-color: #ff78cb;
+}
+.modo-rosa footer{
+  background-color: #ff78cb;
+}
+.modo-rosa .content h2,
+.modo-rosa .comoAgir h2{
+  color: #ff78cb;
+}
+
+body.modo-escuro {
+  background-color: #062F4F;
+}
+.modo-escuro header,
+.modo-escuro footer {
+  background-color: #020e18;
+  color: white;
+}
+.modo-escuro .content h2,
+.modo-escuro .comoAgir h2,
+.modo-escuro .content p,
+.modo-escuro .comoAgir p {
+  color: white;
+}
+
+body.modo-claro {
+  background-color: #f0f4f8;
+}
+
+.modo-claro header,
+.modo-claro footer {
+  background-color: #062F4F;
+  color: white;
+}
+.modo-claro .content h2,
+.modo-claro .comoAgir h2{
+  color: #023e8a;
+}
+.modo-claro .content p,
+.modo-claro .comoAgir p {
+  color: #333;
 }
