--- a/src/css/style.css
+++ b/src/css/style.css
@@ -251,12 +251,23 @@ body {
   margin: 40px;
 }
 
-#beneficios{
+#beneficios ul {
   font-size: 20px;
   color: #333;
   margin-bottom: 10px auto;
   margin: 40px;
 }
+
+#beneficios-img {
+  display: flex;
+  justify-content: center;
+  align-items: left;
+  gap: 40px;
+  padding: 2rem;
+  flex-wrap: wrap;
+}
+
+
 
 #comoAjudar h3 {
   color: #023e8a;
