--- a/src/css/style.css
+++ b/src/css/style.css
@@ -471,10 +471,10 @@ body.modo-rosa {
   background-color: #ff78cb;
 }
 .modo-rosa header{
-  background-color: #ff78cb;
+  background-color: #cb2a8d;
 }
 .modo-rosa footer{
-  background-color: #ff78cb;
+  background-color: #cb2a8d;
 }
 .modo-rosa .content h2,
 .modo-rosa .comoAgir h2,
