--- a/src/css/style.css
+++ b/src/css/style.css
@@ -242,7 +242,7 @@ body {
   color: #333;
   margin-bottom: 10px auto;
   margin: 40px auto;
-  max-width: 1000px;
+  max-width: 700px;
   text-align: center;
 }
 
@@ -282,8 +282,9 @@ body {
   color:#333;
   margin-bottom: 10px auto;
   margin: 40px auto;
-  max-width: 1000px;
+  max-width: 700px;
   text-align: center;
+  align-items: center;
 }
 
 .linha-vertical {
@@ -296,7 +297,7 @@ body {
 }
 
 #tecnologia{
-  max-width: 1000px;
+  max-width: 800px;
   margin: 40px auto;
   padding: 30px;
   background-color: #e1e4e6;
@@ -306,7 +307,7 @@ body {
 
 #comoAjudar,
 #publicoAlvo{
-  max-width: 1000px;
+  max-width: 700px;
   margin: 40px;
   padding: 30px;
   background-color: #e1e4e6;
