--- a/src/css/style.css
+++ b/src/css/style.css
@@ -315,6 +315,17 @@ body {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
 
+.content,
+.comoSolucionar,
+.objetivos-text{
+  max-width: 700px;
+  margin: 40px;
+  padding: 30px;
+  background-color: #e1e4e6;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
 
 /*-------------------------------------------*/
 
@@ -533,6 +544,16 @@ body.modo-rosa {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
 
+.modo-rosa .content,
+.modo-rosa .comoSolucionar,
+.modo-rosa .objetivos-text{
+  max-width: 700px;
+  margin: 40px;
+  padding: 30px;
+  background-color: #fabee3;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
 
 /*-------------------------------------------*/
 
