--- a/src/css/style.css
+++ b/src/css/style.css
@@ -188,7 +188,7 @@ body {
 
 
 .linha {
-  width: 60%;  
+  width: 80%;  
   height: 2px;
   background: #023e8a; 
   margin: 40px auto; 
@@ -289,7 +289,7 @@ body {
 
 .linha-vertical {
   width: 6px;
-  height: 300px;
+  height: 500px;
   background: #023e8a;
   margin: 30px auto 60px auto; 
   display: block;
@@ -297,13 +297,14 @@ body {
 }
 
 #tecnologia{
-  max-width: 800px;
+  max-width: 700px;
   margin: 40px auto;
   padding: 30px;
   background-color: #e1e4e6;
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
+
 
 #comoAjudar,
 #publicoAlvo{
@@ -314,6 +315,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
+
 
 .content,
 .comoSolucionar,
@@ -329,7 +331,7 @@ body {
 
 #beneficios-img {
   display: flex;
-  align-items: center; /* CENTRALIZA verticalmente */
+  align-items: center;
   justify-content: center;
   gap: 40px;
   max-width: 1000px;
@@ -351,10 +353,6 @@ body {
   padding: 1%;
   flex: 1;
 }
-
-
-
-
 
 
 
@@ -561,7 +559,7 @@ body.modo-rosa {
 }
 
 .modo-rosa #tecnologia{
-  max-width: 1000px;
+  max-width: 700px;
   margin: 40px auto;
   padding: 30px;
   background-color: #fabee3;
@@ -571,7 +569,7 @@ body.modo-rosa {
 
 .modo-rosa #comoAjudar,
 .modo-rosa #publicoAlvo{
-  max-width: 1000px;
+  max-width: 700px;
   margin: 40px;
   padding: 30px;
   background-color: #fabee3;
@@ -648,7 +646,7 @@ body.modo-escuro {
 }
 
 .modo-escuro #tecnologia{
-  max-width: 1000px;
+  max-width: 700px;
   margin: 40px auto;
   padding: 30px;
   background-color: #0f5489;
@@ -658,7 +656,7 @@ body.modo-escuro {
 
 .modo-escuro #comoAjudar,
 .modo-escuro #publicoAlvo{
-  max-width: 1000px;
+  max-width: 700px;
   margin: 40px;
   padding: 30px;
   background-color: #0f5489;
